# web_project

./: Cargo.toml  tailwind.config.js
src/: main.rs
static/: index.js
